--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "cd ./src && next",
-    "build": "cd ./src && next build",
-    "start": "cd ./src && next start",
+    "dev": "next",
+    "build": "next build",
+    "start": "ext start",
     "lint": "next lint",
     "test": "jest"
   },
@@ -21,7 +21,14 @@
     "yarn": ">=1.22.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^17.0.31",
+    "@types/react": "18.0.1",
+    "@types/styled-components": "^5.1.25",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^28.1.0",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.0",
@@ -31,9 +38,11 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^27.0.6",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "prettier": "^2.3.2",
     "prettier-eslint": "^13.0.0",
-    "ts-jest": "^27.0.4"
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.6.4"
   }
 }
